<resources>
    <string name="app_name">Just In</string>
    <string name="login_successfully">Login Successful!</string>
    <string name="error_login_failed">Oops! Login failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">Invalid email!</string>
    <string name="error_invalid_password">Password incorrect</string>
</resources>